fixing spacing and style

--- a/css/style.css
+++ b/css/style.css
@@ -31,18 +31,17 @@ a {
 
 /* UTILITIES */
 
-.debug,
-.debug > * {
-  /* border: 3px dashed red; */
-  min-height: 30px;
-}
-
 /* Customization */
 header {
   width: 100%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 15px;
+}
+
+header > div > h1 {
+  font-size: 30pt;
 }
 
 header > div > *:not(h1) {
@@ -52,6 +51,24 @@ header > div > *:not(h1) {
 .toggles {
   display: flex;
   flex-direction: row;
+  align-items: start;
+  margin-left: auto;
+}
+
+.toggles > div {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin: 0 10px;
+}
+
+.toggles > div > i {
+  font-size: 20pt;
+  margin-left: 10px;
+}
+
+.toggles > div:first-of-type > i {
+  color: black;
 }
 
 .container {
@@ -61,6 +78,7 @@ header > div > *:not(h1) {
 }
 
 .cards {
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -85,11 +103,13 @@ header > div > *:not(h1) {
 }
 
 .card > ul {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  gap: 20px 30px;
 }
 
 .card > ul > li > i {
+  font-size: 20pt;
   margin-right: 20px;
 }
 
@@ -105,19 +125,26 @@ header > div > *:not(h1) {
   border-radius: 5px;
 }
 
-.active {
-  background-color: var(--background-color);
-  color: white;
+h2 {
+  font-size: 20pt;
 }
 
-.active > .button {
-  background-color: white;
-  color: var(--background-color);
+h3 {
+  font-weight: normal;
+  color: var(--secondary-text-color);
 }
 
-.active > div:last-of-type > span:last-of-type {
-  background-color: white;
-  color: black;
+.price > span:nth-child(1) {
+  font-size: 20pt;
+  font-weight: bold;
+}
+
+.price > span:nth-child(2) {
+  font-size: 50pt;
+}
+
+.price > span:nth-child(3) {
+  color: var(--secondary-text-color);
 }
 
 .button {
@@ -130,4 +157,26 @@ header > div > *:not(h1) {
   text-align: center;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+.active {
+  background-color: var(--background-color);
+  color: white;
+}
+
+.active > h3 {
+  color: white;
+}
+
+.active > .button {
+  background-color: white;
+  color: var(--background-color);
+}
+.active > .price > span:nth-child(3) {
+  color: white;
+}
+
+.active > div:last-of-type > span:last-of-type {
+  background-color: white;
+  color: black;
 }
